name:           reinforce-gridworlds
version:        0.0.1.0
synopsis:       Building gridworlds for reinforcement learning
description:    See <https://github.com/Sentenai/reinforce README.md>. @reinforce@ is a library which exports an OpenAI-gym-like typeclass, @MonadEnv@, with both an interface to the <https://github.com/openai/gym-http-api/ gym-http-api>, as well as haskell-native environments which provide a substantial speed-up to the http-server interface.
                This is an environment-first library, with basic reinforcment learning algorithms being developed on branches in subpackages (see <https://github.com/Sentenai/reinforce#development-and-milestones Development and Milestones>). @reinforce@ is currently an "alpha" release since it still needs some work defining some formal structures around what state-spaces and action-spaces should look like, however haskell's typesystem is expressive enough that this seems to be more of a "nice-to-have."
                It's in active development and has some beginner-friendly contributions - from porting new gym environments to implementing new algorithms.
category:       Reinforcement learning, Simulations
homepage:       https://github.com/Sentenai/reinforce#readme
bug-reports:    https://github.com/Sentenai/reinforce/issues
author:         Sam Stites, Sentenai Inc.
maintainer:     sam@sentenai.com
copyright:      2017 Sentenai, Inc.
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/Sentenai/reinforce
  subdir: reinforce-gridworlds

library
  exposed-modules:
      Reinforce.Gridworlds
      Reinforce.Gridworlds.Foursquare
  other-modules:
      Paths_reinforce_gridworlds
  hs-source-dirs: src
  default-extensions: MultiParamTypeClasses OverloadedStrings LambdaCase TypeFamilies
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base >=4.9 && <5.0
    , hashable
    , reactive-banana
    , reinforce
    , unordered-containers
    , transformers
    , mtl
    , mwc-random
  default-language: Haskell2010

executable demo
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010
  default-extensions: MultiParamTypeClasses OverloadedStrings LambdaCase TypeFamilies
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base
    , vty
    , reactive-banana
    , reinforce-gridworlds
  other-modules:
      Paths_reinforce_gridworlds

